--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "server.js",
   "scripts": {
     "test": "mocha -r esm test",
-    "start": "sudo PORT=443 nodemon server.js",
-    "debug": "DEBUG_PORT=3000 node -r esm --inspect-brk=9229 --nolazy server.js"
+    "watch": "sudo ENVIRONMENT=production nodemon server.js",
+    "host": "sudo ENVIRONMENT=production node -r esm server.js",
+    "start": "nodemon server.js",
+    "debug": "ENVIRONMENT=debug node -r esm --inspect-brk=9229 --nolazy server.js"
   },
   "keywords": [],
   "author": "",
